video mobile test-13

--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -9,8 +9,8 @@
 <!--                   loop >-->
 <!--                <source src="../img/video/video-2.mp4" type="video/mp4">-->
 <!--            </video>-->
-            <video   autoplay preload="metadata"  muted loop playsinline poster="../img/start-bg.jpg">
-                <source src="../img/video/video-2.mp4">
+            <video   autoplay muted loop playsinline poster="../img/start-bg.jpg">
+                <source src="../img/video/video-2.mp4" type="video/mp4">
             </video>
 
             <!--            <picture class="picture">-->
