--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,6 +1,6 @@
 <section class="section start js-main">
         <div class="start__bg">
-            <video loop  autoplay  playsinline poster="../img/start-bg.jpg">
+            <video loop  autoplay  playsinline poster="../img/start-bg-desck.jpg">
                 <source src="../img/video/video-2.mp4" type="video/mp4">
             </video>
 
