--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,9 +1,10 @@
 <section class="section start js-main">
         <div class="start__bg">
-            <video loop  autoplay  playsinline poster="../img/start-bg-desck.jpg">
-                <source src="../img/video/video-2.mp4" type="video/mp4">
+            <video   autoplay="autoplay"  muted loop playsinline poster="../img/start-bg-desck.jpg">
+                <source src="../img/video/video-2.mp4">
             </video>
-
+<!--            preload="metadata"-->
+            <!--            <canvas class="canvas"></canvas>-->
             <!--            <picture class="picture">-->
 <!--                <source-->
 <!--                        media="(min-width: 600px)"-->
