video mobile test-13

--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,7 +1,7 @@
 <section class="section start js-main">
         <div class="start__bg">
             <video   autoplay="autoplay"  muted loop playsinline poster="../img/start-bg-desck.jpg">
-                <source src="../img/video/video-2.mp4">
+                <source src="../img/video/video-2.mp4" type="video/mp4">
             </video>
 <!--            preload="metadata"-->
             <!--            <canvas class="canvas"></canvas>-->
