video mobile test-13

--- a/app/blocks/_about.html
+++ b/app/blocks/_about.html
@@ -49,7 +49,7 @@
             <ul class="about__list">
                 <li class="about__item">
                     <div class="about__img">
-                        <img src="../img/work-3.jpg" alt="about 1">
+                        <img src=" img/work-3.jpg" alt="about 1">
                     </div>
                     <p class="about__name">Serge Yamroz
                     </p>
@@ -58,7 +58,7 @@
 
                 <li class="about__item">
                     <div class="about__img">
-                        <img src="../img/work-4.jpg" alt="about 2">
+                        <img src=" img/work-4.jpg" alt="about 2">
                     </div>
                     <p class="about__name">Dima Erlikh
                     </p>
@@ -67,7 +67,7 @@
 
                 <li class="about__item">
                     <div class="about__img">
-                        <img src="../img/work-3.jpg" alt="about 3">
+                        <img src=" img/work-3.jpg" alt="about 3">
                     </div>
                     <p class="about__name">Sasha Iliiashenko
                     </p>
