--- a/app/blocks/_contact.html
+++ b/app/blocks/_contact.html
@@ -44,7 +44,7 @@
                     <li class="social__item">
                         <a href="#" class="social__link">
                             <svg class="social__icon">
-                                <use xlink:href="../img/sprite.svg#facebook"></use>
+                                <use xlink:href=" img/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
@@ -52,7 +52,7 @@
                     <li class="social__item">
                         <a href="#" class="social__link">
                             <svg class="social__icon">
-                                <use xlink:href="../img/sprite.svg#instagram"></use>
+                                <use xlink:href=" img/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
@@ -60,7 +60,7 @@
                     <li class="social__item">
                         <a href="#" class="social__link">
                             <svg class="social__icon">
-                                <use xlink:href="../img/sprite.svg#telegram"></use>
+                                <use xlink:href=" img/sprite.svg#telegram"></use>
                             </svg>
                         </a>
                     </li>
