--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,16 +1,16 @@
 <section class="section start js-main">
         <div class="start__bg">
-            <video   autoplay="autoplay"  muted loop playsinline poster="../img/start-bg-desck.jpg">
-                <source src="../img/video/video-2.mp4" type="video/mp4">
+            <video   autoplay="autoplay"  muted loop playsinline poster=" img/start-bg-desck.jpg">
+                <source src=" img/video/video-2.mp4" type="video/mp4">
             </video>
 <!--            preload="metadata"-->
             <!--            <canvas class="canvas"></canvas>-->
             <!--            <picture class="picture">-->
 <!--                <source-->
 <!--                        media="(min-width: 600px)"-->
-<!--                        srcset="../img/start-bg-desck.jpg, ../img/start-bg-desck@2x.jpg 1.25x"-->
+<!--                        srcset=" img/start-bg-desck.jpg,  img/start-bg-desck@2x.jpg 1.25x"-->
 <!--                />-->
-<!--                <img src="../img/start-bg.jpg" alt="start bg">-->
+<!--                <img src=" img/start-bg.jpg" alt="start bg">-->
 <!--            </picture>-->
         </div>
     <div class="container start__container">
