--- a/app/blocks/_work.html
+++ b/app/blocks/_work.html
@@ -6,8 +6,8 @@
         <a href="#" class="work__link">
           <div class="work__wrap">
             <picture class="picture">
-              <source media="(min-width: 600px)" srcset="../img/work-1-desck.jpg, ../img/work-1-desck@2x.jpg 1.25x" />
-              <img class="work__img" src="../img/work-1.jpg" alt="work 1">
+              <source media="(min-width: 600px)" srcset=" img/work-1-desck.jpg,  img/work-1-desck@2x.jpg 1.25x" />
+              <img class="work__img" src=" img/work-1.jpg" alt="work 1">
             </picture>
 
             <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand
@@ -25,8 +25,8 @@
         <a href="#" class="work__link">
           <div class="work__wrap">
             <picture class="picture">
-              <source media="(min-width: 600px)" srcset="../img/work-2-desck.jpg, ../img/work-2-desck@2x.jpg 1.25x" />
-              <img class="work__img" src="../img/work-2.jpg" alt="work 2">
+              <source media="(min-width: 600px)" srcset=" img/work-2-desck.jpg,  img/work-2-desck@2x.jpg 1.25x" />
+              <img class="work__img" src=" img/work-2.jpg" alt="work 2">
             </picture>
 
             <p class="work__category work__category--desktop">bbrand strategy/brand identity/brand identity/brand identity brand
@@ -44,8 +44,8 @@
         <a href="#" class="work__link">
           <div class="work__wrap">
             <picture class="picture">
-              <source media="(min-width: 600px)" srcset="../img/work-3-desck.jpg, ../img/work-3-desck@2x.jpg 1.25x" />
-              <img class="work__img" src="../img/work-3.jpg" alt="work 2">
+              <source media="(min-width: 600px)" srcset=" img/work-3-desck.jpg,  img/work-3-desck@2x.jpg 1.25x" />
+              <img class="work__img" src=" img/work-3.jpg" alt="work 2">
             </picture>
             <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
 
@@ -61,8 +61,8 @@
         <a href="#" class="work__link">
           <div class="work__wrap">
             <picture class="picture">
-              <source media="(min-width: 600px)" srcset="../img/work-4-desck.jpg, ../img/work-4-desck@2x.jpg 1.25x" />
-              <img class="work__img" src="../img/work-4.jpg" alt="work 4">
+              <source media="(min-width: 600px)" srcset=" img/work-4-desck.jpg,  img/work-4-desck@2x.jpg 1.25x" />
+              <img class="work__img" src=" img/work-4.jpg" alt="work 4">
             </picture>
             <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -79,8 +79,8 @@
 
           <div class="work__wrap">
             <picture class="picture">
-              <source media="(min-width: 600px)" srcset="../img/work-5-desck.jpg, ../img/work-5-desck@2x.jpg 1.25x" />
-              <img class="work__img" src="../img/work-5.jpg" alt="work 5">
+              <source media="(min-width: 600px)" srcset=" img/work-5-desck.jpg,  img/work-5-desck@2x.jpg 1.25x" />
+              <img class="work__img" src=" img/work-5.jpg" alt="work 5">
             </picture>
             <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -97,8 +97,8 @@
 
           <div class="work__wrap">
             <picture class="picture">
-              <source media="(min-width: 600px)" srcset="../img/work-6-desck.jpg, ../img/work-6-desck@2x.jpg 1.25x" />
-              <img class="work__img" src="../img/work-6.jpg" alt="work 6">
+              <source media="(min-width: 600px)" srcset=" img/work-6-desck.jpg,  img/work-6-desck@2x.jpg 1.25x" />
+              <img class="work__img" src=" img/work-6.jpg" alt="work 6">
             </picture>
             <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
