--- a/app/blocks/_footer.html
+++ b/app/blocks/_footer.html
@@ -11,7 +11,7 @@
 
     <div class="container footer__container">
         <div class="footer__wrapper">
-            <a href="../index.html" class="footer__logo logo">
+            <a href=" index.html" class="footer__logo logo">
                 <svg class="navigation__icon" version="1.1" id="&#x421;&#x43B;&#x43E;&#x439;_1"
                      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      width="114"
@@ -57,7 +57,7 @@
         <nav class="navigation navigation--footer">
             <ul class="navigation__list navigation__list--footer">
                 <li class="navigation__item navigation__item--footer">
-                    <a href="../work.html" class="navigation__link navigation__link--footer">
+                    <a href=" work.html" class="navigation__link navigation__link--footer">
                         <svg class="navigation__icon" width="76" height="28" viewBox="0 0 76 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask id="mask0_199_80" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="76" height="28">
                                 <path d="M28 22V0H76V5.5L28 22Z" fill="#C4C4C4"/>
@@ -79,7 +79,7 @@
                     </a>
                 </li>
                 <li class="navigation__item navigation__item--footer">
-                    <a href="../about.html" class="navigation__link navigation__link--footer">
+                    <a href=" about.html" class="navigation__link navigation__link--footer">
                         <svg class="navigation__icon" width="91" height="28" viewBox="0 0 91 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask  id="mask0_199_87" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="91" height="28">
                                 <path d="M24 26.0645V6.48499e-05H91V6.00006L24 26.0645Z" fill="#C4C4C4"/>
@@ -101,7 +101,7 @@
                     </a>
                 </li>
                 <li class="navigation__item navigation__item--footer">
-                    <a href="../contact.html" class="navigation__link navigation__link--footer">
+                    <a href=" contact.html" class="navigation__link navigation__link--footer">
                         <svg class="navigation__icon" width="121" height="28" viewBox="0 0 121 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask id="mask0_199_96" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="121" height="28">
                                 <path d="M23 25.1058V0.161312H121V6.87281L23 25.1058Z" fill="#C4C4C4"/>
