--- a/app/blocks/_header-contact.html
+++ b/app/blocks/_header-contact.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container header__container">
         <a href="index.html" class="header__logo logo">
-            <!--                        <img src="../img/logo.png" alt="logo">-->
+            <!--                        <img src=" img/logo.png" alt="logo">-->
             <svg class="navigation__icon" version="1.1" id="&#x421;&#x43B;&#x43E;&#x439;_1"
                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  width="114"
@@ -37,9 +37,9 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                    <a href="../work.html" class="navigation__link">
+                    <a href=" work.html" class="navigation__link">
                         <!--                       <svg width="76" height="28" fill="none">-->
-                        <!--                           <use xlink:href="../img/sprite-menu.svg#work1"></use>-->
+                        <!--                           <use xlink:href=" img/sprite-menu.svg#work1"></use>-->
                         <!--                       </svg>-->
                         <svg class="navigation__icon" width="76" height="28" viewBox="0 0 76 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask id="mask0_199_80" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="76" height="28">
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="navigation__item">
-                    <a href="../about.html" class="navigation__link">
+                    <a href=" about.html" class="navigation__link">
                         <svg class="navigation__icon" width="91" height="28" viewBox="0 0 91 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask  id="mask0_199_87" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="91" height="28">
                                 <path d="M24 26.0645V6.48499e-05H91V6.00006L24 26.0645Z" fill="#C4C4C4"/>
@@ -83,7 +83,7 @@
                     </a>
                 </li>
                 <li class="navigation__item">
-                    <a href="../contact.html" class="navigation__link">
+                    <a href=" contact.html" class="navigation__link">
                         <svg class="navigation__icon" width="121" height="28" viewBox="0 0 121 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask id="mask0_199_96" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="121" height="28">
                                 <path d="M23 25.1058V0.161312H121V6.87281L23 25.1058Z" fill="#C4C4C4"/>
