--- a/app/blocks/_header.html
+++ b/app/blocks/_header.html
@@ -1,7 +1,7 @@
 <header class="header ">
   <div class="container header__container">
     <a href="index.html" class="header__logo logo">
-      <!--                        <img src="../img/logo.png" alt="logo">-->
+      <!--                        <img src=" img/logo.png" alt="logo">-->
       <svg class="navigation__icon" fill="#0B3EF7" version="1.1" id="&#x421;&#x43B;&#x43E;&#x439;_1"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="114"
         height="40" viewBox="0 0 1224.4 430.4">
@@ -36,9 +36,9 @@
     <nav class="navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a href="../work.html" class="navigation__link">
+          <a href=" work.html" class="navigation__link">
             <!--                       <svg width="76" height="28" fill="none">-->
-            <!--                           <use xlink:href="../img/sprite-menu.svg#work1"></use>-->
+            <!--                           <use xlink:href=" img/sprite-menu.svg#work1"></use>-->
             <!--                       </svg>-->
             <svg class="navigation__icon" width="76" height="28" viewBox="0 0 76 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +68,7 @@
           </a>
         </li>
         <li class="navigation__item">
-          <a href="../about.html" class="navigation__link">
+          <a href=" about.html" class="navigation__link">
             <svg class="navigation__icon" width="91" height="28" viewBox="0 0 91 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <mask id="mask0_199_87" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="91"
@@ -98,7 +98,7 @@
           </a>
         </li>
         <li class="navigation__item">
-          <a href="../contact.html" class="navigation__link">
+          <a href=" contact.html" class="navigation__link">
             <svg class="navigation__icon" width="121" height="28" viewBox="0 0 121 28" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <mask id="mask0_199_96" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="121"
