--- a/app/blocks/_work-page.html
+++ b/app/blocks/_work-page.html
@@ -12,9 +12,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-1-desck.jpg, ../img/work-1-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-1-desck.jpg,  img/work-1-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-1.jpg" alt="work 1">
+                            <img class="work__img" src=" img/work-1.jpg" alt="work 1">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
 
@@ -32,9 +32,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-2-desck.jpg, ../img/work-2-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-2-desck.jpg,  img/work-2-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-2.jpg" alt="work 2">
+                            <img class="work__img" src=" img/work-2.jpg" alt="work 2">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity brand
 
@@ -53,9 +53,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-3-desck.jpg, ../img/work-3-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-3-desck.jpg,  img/work-3-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-3.jpg" alt="work 2">
+                            <img class="work__img" src=" img/work-3.jpg" alt="work 2">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
 
@@ -73,9 +73,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-4-desck.jpg, ../img/work-4-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-4-desck.jpg,  img/work-4-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-4.jpg" alt="work 4">
+                            <img class="work__img" src=" img/work-4.jpg" alt="work 4">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -94,9 +94,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-5-desck.jpg, ../img/work-5-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-5-desck.jpg,  img/work-5-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-5.jpg" alt="work 5">
+                            <img class="work__img" src=" img/work-5.jpg" alt="work 5">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -115,9 +115,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-6-desck.jpg, ../img/work-6-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-6-desck.jpg,  img/work-6-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-6.jpg" alt="work 6">
+                            <img class="work__img" src=" img/work-6.jpg" alt="work 6">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -137,9 +137,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-5-desck.jpg, ../img/work-5-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-5-desck.jpg,  img/work-5-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-5.jpg" alt="work 5">
+                            <img class="work__img" src=" img/work-5.jpg" alt="work 5">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -158,9 +158,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-6-desck.jpg, ../img/work-6-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-6-desck.jpg,  img/work-6-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-6.jpg" alt="work 6">
+                            <img class="work__img" src=" img/work-6.jpg" alt="work 6">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
@@ -177,9 +177,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-1-desck.jpg, ../img/work-1-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-1-desck.jpg,  img/work-1-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-1.jpg" alt="work 1">
+                            <img class="work__img" src=" img/work-1.jpg" alt="work 1">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
 
@@ -197,9 +197,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-2-desck.jpg, ../img/work-2-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-2-desck.jpg,  img/work-2-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-2.jpg" alt="work 2">
+                            <img class="work__img" src=" img/work-2.jpg" alt="work 2">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity brand
                             strategy/brand identity/brand identity/brand identity</p>
@@ -218,9 +218,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-3-desck.jpg, ../img/work-3-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-3-desck.jpg,  img/work-3-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-3.jpg" alt="work 2">
+                            <img class="work__img" src=" img/work-3.jpg" alt="work 2">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
 
@@ -238,9 +238,9 @@
                         <picture class="picture">
                             <source
                                     media="(min-width: 600px)"
-                                    srcset="../img/work-4-desck.jpg, ../img/work-4-desck@2x.jpg 1.25x"
+                                    srcset=" img/work-4-desck.jpg,  img/work-4-desck@2x.jpg 1.25x"
                             />
-                            <img class="work__img" src="../img/work-4.jpg" alt="work 4">
+                            <img class="work__img" src=" img/work-4.jpg" alt="work 4">
                         </picture>
                         <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
 
