- добавила заголовок к списку Команды
- добавила стили и классы для баннера и колонок с бордером на стр Проекта

--- a/app/blocks/_about.html
+++ b/app/blocks/_about.html
@@ -1,79 +1,80 @@
 <section class="section about js-main">
-    <div class="container">
-        <div class="about__info">
-            <p>Hi! We’re a team
-                of creatives from Ukraine developing brand concepts, corporate identity
-                and digital design. </p>
+  <div class="container">
+    <div class="about__info">
+      <p>Hi! We’re a team
+        of creatives from Ukraine developing brand concepts, corporate identity
+        and digital design. </p>
 
-            <p>“Spiv” in Ukrainian means “Singing”.
-                We create Design
-                that sings.</p>
+      <p>“Spiv” in Ukrainian means “Singing”.
+        We create Design
+        that sings.</p>
 
-            <p>Also “Spiv”
-                is Ukrainian is a part of word
-                for “Cooperation”.
-                We gather relevant professionals
-                to create projects
-                that matter!</p>
+      <p>Also “Spiv”
+        is Ukrainian is a part of word
+        for “Cooperation”.
+        We gather relevant professionals
+        to create projects
+        that matter!</p>
 
-            <ul>
-                <li>“Spiv” in Ukrainian means “Singing”.
-                    We create Design
-                    that sings.
-                </li>
-            </ul>
-            <ol>
-                <li>“Spiv” in Ukrainian means “Singing”.
-                    We create Design
-                    that sings.
-                </li>
-            </ol>
-            <h2>“Spiv” in Ukrainian means “Singing”.
-                We create Design
-                that sings.</h2>
-            <h3>“Spiv” in Ukrainian means “Singing”.
-                We create Design
-                that sings.</h3>
-            <h4>“Spiv” in Ukrainian means “Singing”.
-                We create Design
-                that sings.</h4>
-            <h5>“Spiv” in Ukrainian means “Singing”.
-                We create Design
-                that sings.</h5>
-            <h6>“Spiv” in Ukrainian means “Singing”.
-                We create Design
-                that sings.</h6>
-        </div>
-
-        <div class="about__content">
-            <ul class="about__list">
-                <li class="about__item">
-                    <div class="about__img">
-                        <img src=" img/work-3.jpg" alt="about 1">
-                    </div>
-                    <p class="about__name">Serge Yamroz
-                    </p>
-                    <p class="about__prof">Brand Spiv-Strategist</p>
-                </li>
-
-                <li class="about__item">
-                    <div class="about__img">
-                        <img src=" img/work-4.jpg" alt="about 2">
-                    </div>
-                    <p class="about__name">Dima Erlikh
-                    </p>
-                    <p class="about__prof"> Art Spiv-Director</p>
-                </li>
-
-                <li class="about__item">
-                    <div class="about__img">
-                        <img src=" img/work-3.jpg" alt="about 3">
-                    </div>
-                    <p class="about__name">Sasha Iliiashenko
-                    </p>
-                    <p class="about__prof">Project Spiv-Manager</p>
-                </li>
-            </ul>
-        </div>
+      <ul>
+        <li>“Spiv” in Ukrainian means “Singing”.
+          We create Design
+          that sings.
+        </li>
+      </ul>
+      <ol>
+        <li>“Spiv” in Ukrainian means “Singing”.
+          We create Design
+          that sings.
+        </li>
+      </ol>
+      <h2>“Spiv” in Ukrainian means “Singing”.
+        We create Design
+        that sings.</h2>
+      <h3>“Spiv” in Ukrainian means “Singing”.
+        We create Design
+        that sings.</h3>
+      <h4>“Spiv” in Ukrainian means “Singing”.
+        We create Design
+        that sings.</h4>
+      <h5>“Spiv” in Ukrainian means “Singing”.
+        We create Design
+        that sings.</h5>
+      <h6>“Spiv” in Ukrainian means “Singing”.
+        We create Design
+        that sings.</h6>
     </div>
+
+    <div class="about__content">
+      <h2 class="about__title">Spiv-Team</h2>
+      <ul class="about__list">
+        <li class="about__item">
+          <div class="about__img">
+            <img src=" img/work-3.jpg" alt="about 1">
+          </div>
+          <p class="about__name">Serge Yamroz
+          </p>
+          <p class="about__prof">Brand Spiv-Strategist</p>
+        </li>
+
+        <li class="about__item">
+          <div class="about__img">
+            <img src=" img/work-4.jpg" alt="about 2">
+          </div>
+          <p class="about__name">Dima Erlikh
+          </p>
+          <p class="about__prof"> Art Spiv-Director</p>
+        </li>
+
+        <li class="about__item">
+          <div class="about__img">
+            <img src=" img/work-3.jpg" alt="about 3">
+          </div>
+          <p class="about__name">Sasha Iliiashenko
+          </p>
+          <p class="about__prof">Project Spiv-Manager</p>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
