--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,21 +1,22 @@
-<section class="section start js-main">
-        <div class="start__bg">
-            <video    autoplay="autoplay" muted loop controls playsinline webkit-playinginline poster=" img/start-bg-desck.jpg">
+<section class="section start js-main" id="app">
+  <div class="start__bg">
+    <video-autoplay></video-autoplay>
+    <!-- <video    autoplay="autoplay" muted loop controls playsinline webkit-playinginline poster=" img/start-bg-desck.jpg">
                 <source src=" img/video/video-2.mp4" type="video/mp4">
-            </video>
-<!--            preload="metadata"-->
-            <!--            <canvas class="canvas"></canvas>-->
-            <!--            <picture class="picture">-->
-<!--                <source-->
-<!--                        media="(min-width: 600px)"-->
-<!--                        srcset=" img/start-bg-desck.jpg,  img/start-bg-desck@2x.jpg 1.25x"-->
-<!--                />-->
-<!--                <img src=" img/start-bg.jpg" alt="start bg">-->
-<!--            </picture>-->
-        </div>
-    <div class="container start__container">
-        <h1 class="start__title">
-            ТУТ <br> БУДЕ <br> ВІДЕО
-        </h1>
-    </div>
+            </video> -->
+    <!--            preload="metadata"-->
+    <!--            <canvas class="canvas"></canvas>-->
+    <!--            <picture class="picture">-->
+    <!--                <source-->
+    <!--                        media="(min-width: 600px)"-->
+    <!--                        srcset=" img/start-bg-desck.jpg,  img/start-bg-desck@2x.jpg 1.25x"-->
+    <!--                />-->
+    <!--                <img src=" img/start-bg.jpg" alt="start bg">-->
+    <!--            </picture>-->
+  </div>
+  <div class="container start__container">
+    <h1 class="start__title">
+      ТУТ <br> БУДЕ <br> ВІДЕО
+    </h1>
+  </div>
 </section>
