--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('blocks/_head.html')
+
 <body>
-@@include('blocks/_header.html')
-<main class="main">
+  @@include('blocks/_header.html')
+  <main class="main">
     @@include('blocks/_start.html')
 
     @@include('blocks/_work.html')
-</main>
-@@include('blocks/_footer.html')
-<script src="./js/script.js"></script>
+  </main>
+  @@include('blocks/_footer.html')
+
+  <script src="https://unpkg.com/vue@3.2.33/dist/vue.global.prod.js"></script>
+  <script>
+    const app = Vue.createApp({
+      data() {
+        return {
+
+        }
+      }
+    });
+
+    app.component('video-autoplay', {
+      template: `
+      <video v-if="isVideo" loop autoplay playsinline :poster="videoPoster" muted>
+        <source :src="videoSrc" :type="videoType">
+      </video>
+      `,
+      data() {
+        return {
+          isVideo: true,
+          videoSrc: 'img/video/video-2.mp4',
+          videoType: 'video/mp4',
+          videoPoster: 'img/start-bg-desck.jpg'
+        };
+      },
+    });
+
+    app.mount('#app');
+  </script>
+
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
